Fixed alignment&spacing for better responsiveness

--- a/styles.css
+++ b/styles.css
@@ -608,7 +608,7 @@
   color: #2563eb;
 }
 
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 810px) {
   .news-title {
     font-size: 2.5rem;
   }
@@ -718,21 +718,24 @@ ul {
   .footer {
     flex-direction: column;
     align-items: center;
-  }
-  .footer-left {
-    padding-left: 10rem;
+    justify-content: center;
   }
   .footer-grid {
     align-self: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    margin: 0 auto;
   }
 }
 
 @media screen and (max-width: 850px) {
   .footer-left {
-    padding-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   .footer-grid {
     grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;;
   }
 }
